# hs-dfa

./: .gitignore  LICENSE  README.md  dfa.cabal  stack.yaml
lib/DFA/: DFA.hs  Parser.hs  QuickCheck.hs
src/: Main.hs
test/: Main.hs
