name:                dfa
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dfa#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  exposed-modules:     DFA.DFA,
                       DFA.QuickCheck,
                       DFA.Parser,
                       TM,
                       TMTest,
                       TMParser

  build-depends:       base >= 4.7 && < 5,
                       megaparsec,
                       QuickCheck,
                       text,
                       mtl,
                       containers,
                       regex-compat,
                       Stream,
                       lens

executable dfa
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       dfa,
                       QuickCheck

Test-Suite test-dfa
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test
  build-depends:     base >= 4.6 && < 5,
                     tasty,
                     tasty-hunit,
                     dfa,
                     containers